samples/_failures_safe/1761729090_798503_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1129110f.c: In function ‘main’:
./samples/SAFE/__tmp_1129110f.c:184:9: error: expected declaration or statement at end of input
  184 |         printf("\n");
      |         ^~~~~~
./samples/SAFE/__tmp_1129110f.c:184:9: error: expected declaration or statement at end of input
